update window style